--- a/src/components/Create/Contact.module.css
+++ b/src/components/Create/Contact.module.css
@@ -1,6 +1,6 @@
 .create {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 0.5fr;
+    grid-template-columns: 32% 23% 32% auto;
     grid-template-rows: auto;
     width: inherit;
     grid-gap: 10px;
@@ -8,7 +8,7 @@
 }
 .item {
     display: grid;
-    background-color: rgb(100, 241, 44);
+    background-color: rgb(207, 243, 108);
     justify-items: center;
     margin-bottom: 2px;
 }
