--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,25 @@
 .header {
     grid-area: h;
-    background-color: aqua;
+    /* background-color: aqua; */
+    background-image: url(../../images/yellowBook.jpg);
+    background-size: cover;
     text-align: center;
+    font-family: 'Orbitron', sance-serif;
+    font-weight: 400;
+    font-size: 1.4em;  
+    display: grid;  
+    grid-template-columns: 40% auto;
+}
+.header div {
+    display: grid;
+    justify-items: end;
+    align-items: center;
+}
+.header p {
+    display: grid;
+    justify-items: start;
+    align-items: center;
+}
+.header div img {
+    width: 75px;
 }
