--- a/src/components/Create/Contact.module.css
+++ b/src/components/Create/Contact.module.css
@@ -3,14 +3,15 @@
     grid-template-columns: 32% 23% 32% auto;
     grid-template-rows: auto;
     width: inherit;
-    grid-gap: 10px;
+    grid-gap: 1rem;
     height: fit-content;
 }
 .item {
     display: grid;
     background-color: rgb(207, 243, 108);
     justify-items: center;
-    margin-bottom: 2px;
+    margin-bottom: 0.2rem;
+    font-size: 1.5rem;
 }
 .hideButton {
     display: none;
